[project]
name = "content-ingest"
version = "0.1.0"
description = "A CLI tool for content ingestion"
authors = [
    { name="Chayapan K.", email="chayapan@gmail.com" }
]
dependencies = [
    "click>=8.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"